# Text-Simplification-ISC

./: .env.example  .gitignore  LICENSE  README.md  app.py  instructions.md  instructions_for_the_interface.md  main.py  pyproject.toml  readme-template.md
.streamlit/: config.toml
src/: state.py  workflow.py
src/agents/: analyst.py  editor.py  fact_checker.py  glossary_builder.py  guardrail.py  judge.py  llm_factory.py  pl_simplifier.py  readability_evaluator.py  step_delay.py  term_explainer.py
src/graph/: workflow.py
src/mcp/: client_metrics.py  mcp_manager.py  metrics_server.py  search_server.py
src/tools/: metrics.py
