[project]
name = "text-simplification-isc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bert-score>=0.3.13",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "langchain-core>=1.2.26",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=0.1.0",
    "langchain-mistralai>=0.1.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.1.0",
    "langgraph>=1.1.6",
    "numpy>=2.4.4",
    "sacrebleu>=2.6.0",
    "sacremoses>=0.1.1",
]
